text overflow correction
text overflow correction

--- a/dev/sass/pages/_client.sass
+++ b/dev/sass/pages/_client.sass
@@ -1,9 +1,10 @@
 +desktop
   .button-to-top
-    bottom: 50px
+    bottom: 66px
     right: 64px
     cursor: pointer
     position: fixed
+    z-index: 9
     span
       background-image: url(../img/client/button_to_top.png)
       background-size: 100% auto
@@ -575,12 +576,6 @@
     padding-left: 0
     display: flex
     flex-wrap: wrap
-  .common-text
-    overflow: hidden
-    text-overflow: ellipsis
-    display: -webkit-box
-    -webkit-line-clamp: 2
-    -webkit-box-orient: vertical
   .title-item
     color: $base-color-blue
   .common-text
@@ -1430,12 +1425,6 @@
     .common-block-arrow
       background-color: #f5f8fc
        z-index: 9
-  .is-limit
-    overflow: hidden
-    text-overflow: ellipsis
-    display: -webkit-box
-    -webkit-line-clamp: 3
-    -webkit-box-orient: vertical
   .title-company,
   .sub-title,
   .common-title
@@ -1515,8 +1504,6 @@
         width: 332px
         margin-right: 16px
         line-height: calc(56 / 28)
-      .common-text
-        -webkit-line-clamp: 3
     .content-bottom
       padding: 64px 16px
     .item-detail
@@ -1536,7 +1523,6 @@
         .item-detail
           flex-wrap: wrap
         .text-detail
-          -webkit-line-clamp: 2
           margin-bottom: 8px
           width: 100%
     .list-item-right
@@ -1627,7 +1613,6 @@
         margin-bottom: .64rem
       .common-text
         letter-spacing: .05em
-        -webkit-line-clamp: 4
     .content-bottom
       padding: .8rem 0
     .title-company
@@ -1658,10 +1643,6 @@
         width: 100%
     .text-detail
       line-height: calc(44 / 24)
-    .item-work
-      &.is-flex
-        .text-detail
-          -webkit-line-clamp: 3
     .is-limit
       -webkit-line-clamp: 2
     .list-sub-work
@@ -1773,10 +1754,11 @@
     .title-service
       position: absolute
       color: #fff
-      bottom: 66px
+      bottom: 14px
       left: 16px
       font-size: .16rem
       padding-right: 56px
+      margin-bottom: 0
       text-shadow: 0 3px 10px rgba(0,0,0,.8)
     .image-service
       margin-bottom: 24px
@@ -1824,7 +1806,6 @@
     
     .text-service
       line-height: calc(26 / 13)
-      -webkit-line-clamp: 2
     .common-block-arrow
       width: 44px
       height: 44px
@@ -1862,6 +1843,8 @@
     .common-block-arrow
       width: .64rem
       height: .64rem
+      bottom: auto
+      top: 2.25rem
       &:after
         width: .48rem
         height: .48rem
@@ -1871,7 +1854,6 @@
       img
         width: 100%
     .text-service
-      -webkit-line-clamp: 3
       line-height: calc(44 / 24)
     .list-service
       margin-bottom: .96rem
@@ -2623,8 +2605,6 @@
     .list-service
       justify-content: space-between
       margin-bottom: 0
-      .common-text
-        -webkit-line-clamp: 2
     .image-service
       width: 152px
       height: 152px
@@ -2683,7 +2663,6 @@
       justify-content: space-between
       margin-bottom: 0
       .common-text
-        -webkit-line-clamp: 3
         line-height: calc(44 / 24)
     .item-service
       width: calc(50% - .16rem)
