--- a/dev/sass/pages/_job.sass
+++ b/dev/sass/pages/_job.sass
@@ -1691,7 +1691,6 @@
         opacity: 1
 
     .voice-name
-      -webkit-line-clamp: 3
       font-size: .18rem
     .voice-detail
       line-height: calc(38 / 18)
@@ -1789,7 +1788,6 @@
       padding: .34rem .48rem .48rem
     .voice-name
       font-size: .24rem
-      -webkit-line-clamp: 2
     .voice-detail
       line-height: calc(50 / 24)
       margin-bottom: .24rem
