--- a/dev/sass/pages/_recruit.sass
+++ b/dev/sass/pages/_recruit.sass
@@ -137,11 +137,6 @@
       padding-right: .32rem
     .common-text
       line-height: calc(44 / 24)
-      overflow: hidden
-      text-overflow: ellipsis
-      display: -webkit-box
-      -webkit-line-clamp: 3
-      -webkit-box-orient: vertical
       margin-bottom: .48rem
     .image-left
       img
@@ -192,7 +187,6 @@
       margin-bottom: 16px
     .common-text
       margin-bottom: 48px
-      -webkit-line-clamp: 2
 
 +mobile
   .section-recruit-environment
@@ -219,7 +213,6 @@
         width: 100%
     .common-text
       line-height: calc(44 / 24)
-      -webkit-line-clamp: 3
       margin-bottom: .64rem
 
 .section-recruit-employment
@@ -276,8 +269,6 @@
       left: 15px
       font-size: .18rem
       padding-right: 56px
-    .common-text
-      -webkit-line-clamp: 4
 
 @media print, (min-width: 768.98px) and (max-width: 880px)
   .section-recruit-employment
@@ -319,7 +310,6 @@
       left: .54rem
       padding-right: 1.12rem
     .common-text
-      -webkit-line-clamp: 3
       line-height: calc(44 / 24)
 
 .keyvisual-recruit-engineer
@@ -426,7 +416,6 @@
         margin-right: unset
       .common-text
         margin-bottom: 56px
-        -webkit-line-clamp: 2
       .is-icon
         &:after
           background-image: url(../img/recruit/recruit_engineer_img_06.png)
@@ -475,7 +464,6 @@
           border-top-left-radius: 10px
           border-bottom-right-radius: 10px
       .common-text
-        -webkit-line-clamp: 2
         margin-bottom: 48px
     .title-information
       font-size: .16rem
@@ -493,8 +481,6 @@
         margin-right: 16px
       .common-button-inquiry
         margin-bottom: 16px
-      .common-text
-        -webkit-line-clamp: 2
     .common-big-button
       border-radius: 100px
       background-color: #005BAA
@@ -552,7 +538,6 @@
         &:not(:last-child)
           margin-bottom: .64rem
       .common-text
-        -webkit-line-clamp: 4
         margin-bottom: .48rem
       .block-content
         width: 5.76rem
@@ -589,7 +574,6 @@
           border-bottom-right-radius: .1rem
           width: 100%
       .common-text
-        -webkit-line-clamp: 3
         margin-bottom: .64rem
     .block-information
       padding: .64rem
@@ -597,7 +581,6 @@
         font-size: .26rem
         text-align: center
       .common-text
-        -webkit-line-clamp: 3
         padding: 0 .16rem
         line-height: calc(44 / 24)
     .block-information,
