--- a/dev/sass/parts/modules/_common_section_top.sass
+++ b/dev/sass/parts/modules/_common_section_top.sass
@@ -9,6 +9,7 @@
       margin-bottom: 40px
     .common-text
       margin-bottom: 24px
+      font-weight: 700
 
 @media print, (min-width: 768.98px) and (max-width: 1058px)
   .section-job-about
